# DocuAgent

./: .env.example  .gitignore  README.md  pyproject.toml
docuagent/: __init__.py  cli.py
docuagent/agent/: __init__.py  documenter.py
docuagent/analyzer/: __init__.py  extractor.py  parser.py
docuagent/html/: __init__.py  generator.py
docuagent/models/: __init__.py  components.py
docuagent/toc/: __init__.py  generator.py  persistence.py
